--- a/index.html
+++ b/index.html
@@ -4,139 +4,144 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QR Code Scanner</title>
-    <script src="https://unpkg.com/qr-scanner/qr-scanner.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.js"></script>
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            background: linear-gradient(135deg, #6f86d6, #48c6ef);
-            color: white;
             text-align: center;
+            padding: 20px;
+            background-color: #f9f9f9;
         }
-        #scanner {
-            width: 300px;
-            height: 300px;
-            margin: 20px 0;
-            border: 2px solid white;
+        #canvas {
+            display: none;
+        }
+        video {
+            width: 100%;
+            max-width: 500px;
+            border: 1px solid #ddd;
             border-radius: 10px;
         }
-        #liveview {
-            width: 320px;
-            height: 240px;
-            border-radius: 10px;
-            margin-bottom: 10px;
-        }
-        #status {
-            font-size: 24px;
+        #result {
             margin-top: 20px;
-        }
-        .result {
-            font-size: 100px;
-            margin-top: 20px;
-        }
-        .result.green {
-            color: #4CAF50;
-        }
-        .result.red {
-            color: #F44336;
+            font-size: 1.2em;
         }
         button {
-            padding: 15px 30px;
-            font-size: 18px;
+            margin-top: 20px;
+            padding: 10px 20px;
+            background-color: #4CAF50;
+            color: white;
+            font-size: 16px;
             border: none;
             border-radius: 5px;
             cursor: pointer;
-            background-color: #333;
-            color: white;
-            margin-top: 20px;
-            display: inline-block;
         }
         button:hover {
-            background-color: #555;
-        }
-        #startScanBtn {
-            background-color: #4CAF50;
-            font-size: 20px;
-            padding: 15px 30px;
-        }
-        #startScanBtn:hover {
             background-color: #45a049;
         }
-        #enableCameraBtn {
-            background-color: #f39c12;
-            font-size: 16px;
-            padding: 10px 20px;
+        /* Animation */
+        .animation {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.8);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            opacity: 0;
+            color: white;
+            font-size: 2em;
+            font-weight: bold;
+            animation: fadeInOut 1.5s ease-in-out forwards;
         }
-        #enableCameraBtn:hover {
-            background-color: #e67e22;
+        @keyframes fadeInOut {
+            0% {
+                opacity: 0;
+            }
+            50% {
+                opacity: 1;
+            }
+            100% {
+                opacity: 0;
+            }
+        }
+        #startScanButton {
+            background-color: #008CBA;
+        }
+        #startCameraButton {
+            background-color: #f44336;
         }
     </style>
 </head>
 <body>
     <h1>QR Code Scanner</h1>
-    <video id="liveview" autoplay muted></video>
-    <div id="status">Scan a QR code</div>
-    <div class="result" id="result"></div>
-    <button id="enableCameraBtn" onclick="enableCamera()">Activate Camera</button>
-    <button id="startScanBtn" onclick="startScanner()">Start Scanning</button>
+    <video id="preview" width="100%" height="auto" autoplay></video>
+    <canvas id="canvas"></canvas>
+    <div id="result"></div>
+    <button id="startCameraButton" onclick="startCamera()">Activate Camera</button>
+    <button id="startScanButton" onclick="startScanning()" disabled>Start Scanning</button>
+
+    <div id="animation" class="animation" style="display:none;"></div>
 
     <script>
-        const expectedHash = "5d711ecc274a7d5ccbe39c55d40484819b0f2e7351ba0f0e49eee9cb2e663ed4646de872ef3b0b8349f66dd0228b8a36bd2f2e16ac100a1848b35ed7ea2514aa"; // The expected hash value
-        const liveviewElement = document.getElementById("liveview");
+        const expectedHash = "5d711ecc274a7d5ccbe39c55d40484819b0f2e7351ba0f0e49eee9cb2e663ed4646de872ef3b0b8349f66dd0228b8a36bd2f2e16ac100a1848b35ed7ea2514aa"; // Der erwartete Hash-Wert
+        const canvasElement = document.getElementById("canvas");
+        const videoElement = document.getElementById("preview");
         const resultElement = document.getElementById("result");
-        const statusElement = document.getElementById("status");
+        const animationElement = document.getElementById("animation");
+        const startScanButton = document.getElementById("startScanButton");
 
-        let qrScanner;
-        let cameraEnabled = false;
+        let scanning = false;
 
-        // Function to enable the camera
-        function enableCamera() {
-            if (navigator.mediaDevices && navigator.mediaDevices.getUserMedia) {
-                navigator.mediaDevices.getUserMedia({ video: { facingMode: "environment" } })
-                    .then(function (stream) {
-                        liveviewElement.srcObject = stream;  // Display the live camera feed
-                        cameraEnabled = true;
-                        statusElement.textContent = "Camera is ready. Click 'Start Scanning'.";
-                    })
-                    .catch(function (err) {
-                        console.error("Error accessing camera: ", err);
-                        alert("Camera access is required.");
-                    });
-            } else {
-                alert("Camera access not supported in this browser.");
-            }
+        // Startet die Kamera und aktiviert den Scannen-Button
+        async function startCamera() {
+            const stream = await navigator.mediaDevices.getUserMedia({ video: { facingMode: "environment" } });
+            videoElement.srcObject = stream;
+            startScanButton.disabled = false; // Aktiviert den Scannen-Button
         }
 
-        // Function to start the QR scanner
-        function startScanner() {
-            if (!cameraEnabled) {
-                alert("Please enable the camera first.");
-                return;
+        // Startet das Scannen des QR-Codes
+        function startScanning() {
+            scanning = true;
+            scanQRCode();
+        }
+
+        // Scannt QR-Codes
+        function scanQRCode() {
+            if (!scanning) return;
+
+            const context = canvasElement.getContext("2d");
+            context.drawImage(videoElement, 0, 0, canvasElement.width, canvasElement.height);
+            const imageData = context.getImageData(0, 0, canvasElement.width, canvasElement.height);
+            const code = jsQR(imageData.data, canvasElement.width, canvasElement.height);
+
+            if (code) {
+                const qrCodeHash = code.data;  // Die Daten des QR-Codes
+
+                // Vergleicht den Hash des QR-Codes mit dem erwarteten Hash
+                if (qrCodeHash === expectedHash) {
+                    showAnimation("✔ Hash matched!", "green");
+                } else {
+                    showAnimation("✘ Hash does not match!", "red");
+                }
             }
 
-            // Create the QR scanner instance
-            qrScanner = new QrScanner(liveviewElement, (result) => {
-                console.log("QR Code detected: ", result);
-                if (result === expectedHash) {
-                    resultElement.textContent = "✔";
-                    resultElement.className = "result green";
-                    statusElement.textContent = "Hash matched!";
-                } else {
-                    resultElement.textContent = "✘";
-                    resultElement.className = "result red";
-                    statusElement.textContent = "Hash does not match!";
-                }
-            });
+            // Fordert die nächste Frame für das Scannen an
+            requestAnimationFrame(scanQRCode);
+        }
 
-            // Start scanning
-            qrScanner.start();
-            statusElement.textContent = "Scanning QR code...";
+        // Zeigt eine Animation und das Ergebnis an
+        function showAnimation(message, color) {
+            animationElement.textContent = message;
+            animationElement.style.backgroundColor = color;
+            animationElement.style.display = "flex";
+
+            // Versteckt die Animation nach der Dauer der Animation
+            setTimeout(() => {
+                animationElement.style.display = "none";
+                resultElement.innerHTML = `<span style="color: ${color};">${message}</span>`;
+            }, 1500); // Animation dauert 1,5 Sekunden
         }
     </script>
 </body>
